{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 27,
  "lineage": "107ae307-9409-8ae7-8efe-67f54a9d7c4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791156864754:internet-gateway/igw-092ff4288ea99a31d",
            "id": "igw-092ff4288ea99a31d",
            "owner_id": "791156864754",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "vpc_id": "vpc-0c09698eaba924e39"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791156864754:route-table/rtb-0e1631ed88f699328",
            "id": "rtb-0e1631ed88f699328",
            "owner_id": "791156864754",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c09698eaba924e39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791156864754:route-table/rtb-08cb6c74f047b2769",
            "id": "rtb-08cb6c74f047b2769",
            "owner_id": "791156864754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092ff4288ea99a31d",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092ff4288ea99a31d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-route-table"
            },
            "tags_all": {
              "Name": "pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c09698eaba924e39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf26db0e4cceab0f",
            "route_table_id": "rtb-0e1631ed88f699328",
            "subnet_id": "subnet-063667c93d580ecb2"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0269652520d86bcb9",
            "route_table_id": "rtb-08cb6c74f047b2769",
            "subnet_id": "subnet-0dcbce7483e64ea46"
          },
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_route_table.pub-route-table",
            "aws_subnet.pub-subnet",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791156864754:subnet/subnet-063667c93d580ecb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063667c93d580ecb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "791156864754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0c09698eaba924e39"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791156864754:subnet/subnet-0dcbce7483e64ea46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcbce7483e64ea46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "791156864754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0c09698eaba924e39"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791156864754:vpc/vpc-0c09698eaba924e39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fef66fd60be23268",
            "default_route_table_id": "rtb-0a70cf1bf5ad85b59",
            "default_security_group_id": "sg-03ee67fc31a4e00ad",
            "dhcp_options_id": "dopt-24701e5e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c09698eaba924e39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a70cf1bf5ad85b59",
            "owner_id": "791156864754",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}